--- a/PiniT/Views/Reservations/Index.cshtml
+++ b/PiniT/Views/Reservations/Index.cshtml
@@ -3,14 +3,20 @@
 @{
     ViewBag.Title = "Reservations";
 }
+<style>
+    body {
+        background-image: url('../../Content/Images/background.jpg');
+        background-size: cover;
+        background-attachment: fixed;
+    }
+</style>
+<h2 class="a my-2 mx-auto text-center text-white">My Reservations</h2>
 
-<h2 class="a my-2 mx-auto text-center">My Reservations</h2>
-
-@foreach (var reservation in Model.OrderBy(x=>x.BookDate).Reverse())
+@foreach (var reservation in Model.OrderBy(x => x.BookDate).Reverse())
 {
     <div class="row">
-        <div class="col-md-8 card shadow-lg p-0 mx-auto">
-            <div class="card-header border-bottom border-dark text-center">
+        <div class="col-md-8 card shadow-lg p-0 mx-auto border border-dark">
+            <div class="card-header bg-dark text-white text-center">
                 @if (User.IsInRole("Customer"))
                 {
                     foreach (var restaurant in ViewBag.Restaurants)
@@ -27,7 +33,7 @@
                 }
 
             </div>
-            <div class="card-body bg-light boder border-dark text-center">
+            <div id="card-back" class="card-body text-white text-center">
                 <div class="row">
                     <div class="col-sm-6 text-center">
                         <p class="m-0">BookDate: <br /><cite class="font-weight-light">@reservation.BookDate</cite></p>
@@ -42,10 +48,10 @@
             </div>
         </div>
     </div>
-    
+
 }
 <div class="text-center">
-    @Html.ActionLink("Back", "Index", "Home", null, new { @class = "btn btn-info ml-auto" })
+    @Html.ActionLink("Back", "Index", "Home", null, new { @class = "btn btn-dark ml-auto mb-2" })
 </div>
 
 
