--- a/PiniT/Views/Products/CustomerIndex.cshtml
+++ b/PiniT/Views/Products/CustomerIndex.cshtml
@@ -4,13 +4,21 @@
     // ViewBag.Title = "Index";
 }
 
+<style>
+    body {
+        background-image: url("/Content/Images/background.jpg");
+        background-size: cover;
+        background-attachment: fixed;
+    }
+</style>
+
 <div class="row mt-3 mb-1">
-    <div class="col-md-9 mx-auto">
-        <h2 class="a">@ViewBag.Title</h2>
+    <div class="col-md-6 mx-auto">
+        <h2 class="a text-white text-center mx-auto font-weight-bold">@ViewBag.Title</h2>
     </div>
 </div>
 <div class="row mt-3 mb-1">
-    <div class="col-md-6 p-3 border rounded bg-light mx-auto">
+    <div class="col-md-6 p-3 rounded mx-auto text-center">
         @using (Html.BeginForm("CustomerIndex", "Products", FormMethod.Get, new { id = "search-form" }))
         {
             <div id="filters" class="row">
@@ -20,9 +28,9 @@
                 <div class="col-4 px-1">
                     @Html.DropDownListFor(x => x.Category, (SelectList)ViewBag.Categories, "Category", new { @class = "form-control", id = "category" })
                 </div>
-              
+
                 <div class="col-2 px-1">
-                    <button id="search" type="submit" class="btn btn-primary btn-block">Search</button>
+                    <button id="search" type="submit" class="btn btn-danger btn-block">Search</button>
                 </div>
             </div>
         }
@@ -34,16 +42,23 @@
         {
 
             <div class="col-sm-2"></div>
-            <div class=" col-sm-8 rounded shadow-lg mx-auto mt-3 mb-1 text-center">
-                <h3 class="a">@category.Name</h3>
+            <div class="col-sm-8 rounded shadow-lg mx-auto mt-3 mb-1 text-center container">
+                <h3 class="bg-dark text-white mb-0 p-2">@category.Name</h3>
+                
                 @foreach (var product in Model.Products)
                 {
-                    if (product.CategoryId == category.Name)
-                    {
-                        <p class="font-weight-bold font-italic">@product.Name - <cite class="font-weight-light">$@product.Price</cite><br />
-                        <cite class="font-weight-lighter font-italic">@product.Description</cite></p>
-                        <hr />
-                    }
+            <div id="card-back">
+                @if (product.CategoryId == category.Name)
+                {
+                    <br />
+                    <p class="h5 font-weight-bold font-italic text-white mb-0">
+                        @product.Name - <cite class="font-weight-light">$@product.Price</cite><br />
+                        <cite class="font-weight-lighter font-italic">@product.Description</cite>
+                    </p>
+                    <br />
+                    <hr class="m-0" />
+                }
+            </div>
                 }
             </div>
             <div class="col-sm-2"></div>
@@ -53,8 +68,8 @@
 </div>
 
 <div>
-    <div id="a">
-        @Html.ActionLink("Back to List", "CustomerIndex", "Restaurants", null, new { @class = "btn btn-info col-2 ml-3" })
+    <div class="form-group text-center mx-auto">
+        @Html.ActionLink("Back", "CustomerIndex", "Restaurants", null, new { @class = "btn btn-dark" })
     </div>
 </div>
 
