--- a/PiniT/Views/Home/Contact.cshtml
+++ b/PiniT/Views/Home/Contact.cshtml
@@ -7,6 +7,7 @@
          
             background-image: url('../../Content/Images/background.jpg');
             background-size:cover;
+            background-attachment:fixed;
         }
     </style>
 
@@ -31,11 +32,14 @@
                     <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
                 </address>
 
-
-
                 <address class="cold-m-4 text-center mx-auto">
                     <strong>Join us:</strong><br />
-                    <img src="~/Content/Images/iconsm.png" style="width:200px"/>
+                    <div>
+                        <a href="https://el-gr.facebook.com/"><<img src="~/Content/Images/fb.png" style="width:30px"></a>
+                        <a href="https://www.instagram.com/?hl=el"><<img src="~/Content/Images/insta.png" style="width:30px"></a>
+                        <a href="https://gr.pinterest.com/"><<img src="~/Content/Images/pin.png" style="width:30px"></a>
+                        <a href="https://www.youtube.com/"><<img src="~/Content/Images/yt.png" style="width:30px"></a>
+                    </div>
                 </address>
 
             </div>
