--- a/PiniT/Views/Products/Create.cshtml
+++ b/PiniT/Views/Products/Create.cshtml
@@ -8,11 +8,12 @@
     body{
     background-image: url("https://lonelyplanetimages.imgix.net/copilot/images/interest/food-and-drink.jpg?auto=compress&h=800");
     background-size: cover;
-    opacity: 0.9;
+    background-attachment: fixed;
+    opacity: 1.3;
     }
 </style>
 
-<h2 class="mx-auto mb-2 mt-4 text-center a">Product Creation</h2>
+<h2 class="mx-auto mb-2 mt-4 text-center font-weight-bold a">Product Creation</h2>
 <hr />
 
 
@@ -20,7 +21,7 @@
 {
     @Html.AntiForgeryToken()
     
-<div class="col-md-6 col-8 shadow-lg container border border-white bg-white text-center mx-auto">
+<div id="card-back" class="col-md-6 col-8 shadow-lg rounded border border-dark text-white text-center mx-auto">
     
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -42,30 +43,27 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2 font-italic font-weight-bold" })
             <div class="col-md-6 mx-auto">
-                @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control text-center font-weight-light" } })
                 @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2 font-italic font-weight-bold" })
+            @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label font-italic text-center font-weight-bold" })
             <div class="col-md-6 mx-auto">
-                @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control text-center font-weight-light" } })
                 @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-8 mx-auto">
-                <input type="submit" value="Create" class="btn btn-info mb-2" />
+            <div class="col-md-offset-2 col-md-6 mx-auto text-center btn-group">
+                <input type="submit" value="Create" class="btn btn-success mb-2" />
                 @Html.ActionLink("Back", "ManagerIndex", null, new { @class = "btn btn-dark ml-auto mb-2" })
             </div>
         </div>
     </div>
-
     }
-
-   
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
