--- a/PiniT/Views/Products/CustomerIndex.cshtml
+++ b/PiniT/Views/Products/CustomerIndex.cshtml
@@ -9,6 +9,7 @@
         background-image: url("/Content/Images/background.jpg");
         background-size: cover;
         background-attachment: fixed;
+        opacity: 1.3;
     }
 </style>
 
@@ -43,7 +44,7 @@
 
             <div class="col-sm-2"></div>
             <div class="col-sm-8 rounded shadow-lg mx-auto mt-3 mb-1 text-center container">
-                <h3 class="bg-dark text-white mb-0 p-2">@category.Name</h3>
+                <h3 class="font-italic bg-dark text-white mb-0">@category.Name</h3>
                 
                 @foreach (var product in Model.Products)
                 {
@@ -68,7 +69,7 @@
 </div>
 
 <div>
-    <div class="form-group text-center mx-auto">
+    <div class="text-center mx-auto">
         @Html.ActionLink("Back", "CustomerIndex", "Restaurants", null, new { @class = "btn btn-dark" })
     </div>
 </div>
