--- a/PiniT/Views/Products/Delete.cshtml
+++ b/PiniT/Views/Products/Delete.cshtml
@@ -3,13 +3,20 @@
 @{
     ViewBag.Title = "Delete";
 }
+<style>
+    body {
+        background-image: url("https://lonelyplanetimages.imgix.net/copilot/images/interest/food-and-drink.jpg?auto=compress&h=800");
+        background-size: cover;
+        background-attachment: fixed;
+        opacity: 1.3;
+    }
+</style>
 
-<h2 class="mx-auto mb-2 mt-2 text-center a">Delete Product</h2>
+<h2 class="mx-auto mb-2 mt-4 text-center font-weight-bold a">Delete Product</h2>
 <hr />
 
-
-<div class="col-md-6 col-8 shadow-lg container border border-white bg-white text-center mx-auto">
-    <dl class="dl-horizontal font-italic">
+<div id="card-back" class="col-md-6 col-8 shadow-lg container text-white text-center mx-auto">
+    <dl class="h5 dl-horizontal font-italic">
         <dt>
             @Html.DisplayNameFor(model => model.Category.Name)
         </dt>
@@ -24,7 +31,7 @@
         <dd>
             @Html.DisplayFor(model => model.Name)
         </dd>
-
+        <hr />
         <dt>
             @Html.DisplayNameFor(model => model.Description)
         </dt>
@@ -32,7 +39,7 @@
         <dd>
             @Html.DisplayFor(model => model.Description)
         </dd>
-
+        <hr />
         <dt>
             @Html.DisplayNameFor(model => model.Price)
         </dt>
@@ -40,16 +47,16 @@
         <dd>
             @Html.DisplayFor(model => model.Price)
         </dd>
-
+        <hr />
     </dl>
 
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "ManagerIndex")
+        <div class="form-group col-md-offset-2 col-md-6 mx-auto text-center btn-group">
+            <input type="submit" value="Delete" class="btn btn-success mb-2" />
+            @Html.ActionLink("Back", "ManagerIndex",null, new { @class = "btn btn-dark ml-auto mb-2" })
         </div>
     }
 </div>
