--- a/PiniT/Views/Products/ManagerIndex.cshtml
+++ b/PiniT/Views/Products/ManagerIndex.cshtml
@@ -3,20 +3,30 @@
 @{
     ViewBag.Title = "Index";
 }
+
 <style>
+    body {
+        background-image: url("https://lonelyplanetimages.imgix.net/copilot/images/interest/food-and-drink.jpg?auto=compress&h=800");
+        background-size: cover;
+        background-attachment: fixed;
+        opacity: 1.3;
+    }
+
     #create-product {
-        position:absolute;
-        top:0;
-        left:0;
-        
+        position: absolute;
+        top: 5px;
+        left: 12px;
     }
 </style>
-    <div class="row">
-        <h2 class="cold-md-6 text-center mx-auto">Your Products</h2>
-    </div>
 
-    <div class="row">
-    <div class="col-md-6 mt-auto p-3 border rounded bg-light mx-auto mt-2">
+<div class="row mt-3 mb-1">
+    <div class="col-md-6 mx-auto">
+        <h2 class="a text-center mx-auto font-weight-bold">Your Products</h2>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-6 p-3 rounded mx-auto text-center">
         @using (Html.BeginForm("ManagerIndex", "Products", FormMethod.Get, new { id = "search-form" }))
         {
             <div id="filters" class="row">
@@ -27,7 +37,7 @@
                     @Html.DropDownListFor(x => x.Category, (SelectList)ViewBag.Categories, "Category", new { @class = "form-control", id = "category" })
                 </div>
                 <div class="col-2 px-1">
-                    <button id="search" type="submit" class="btn btn-primary btn-block">Search</button>
+                    <button id="search" type="submit" class="btn btn-danger btn-block">Search</button>
                 </div>
             </div>
         }
@@ -39,23 +49,26 @@
         {
             if (Model.Products.Any(x => x.CategoryId == category.Name))
             {
-                <div class="col-2"></div>
-                <div class=" col-sm-8 rounded bg-light shadow-lg mx-auto mt-3 mb-1 text-center">
-                    
-                    <h3 class="font-italic border-bottom mt-1"> @category.Name <cite>@Html.ActionLink(" ", "Create", null, new { id="create-product", @class = "btn btn-primary fas fa-plus mt-1 ml-1 p-1" })</cite></h3>
+                <div class="col-sm-2"></div>
+                <div class="col-sm-8 rounded mx-auto mt-3 mb-1 text-center shadow-lg p-0">
+
+                    <h3 class="font-italic bg-dark text-white mb-0 p-2"> @category.Name <cite>@Html.ActionLink(" ", "Create", null, new { id = "create-product", @class = "btn btn-dark text-danger fa-1x fas fa-plus mt-1 ml-1 p-1" })</cite></h3>
                     @foreach (var product in Model.Products)
                     {
-
-                        if (product.CategoryId == category.Name)
-                        {
-                            <p class="h5">@product.Name - @product.Price</p>
-                            <p class="font-weight-lighter mb-1">@product.Description</p>
+                <div id="card-back" class="text-white">
+                    @if (product.CategoryId == category.Name)
+                    {
+                        
+                        <p class="h5">@product.Name - @product.Price</p>
+                        <p class="font-weight-lighter mb-1">@product.Description</p>
+                      
                             @Html.ActionLink(" ", "Edit", new { id = product.ProductId }, new { @class = "m-1 btn btn-dark fas fa-pencil-alt" })
-
-
                             @Html.ActionLink(" ", "Delete", new { id = product.ProductId }, new { @class = "m-1 btn btn-danger fas fa-trash" })
-                            <hr />
-                        }
+                        
+                        <hr class="m-0" />
+                        <br />
+                    }
+                </div>
                     }
                 </div>
                 <div class="col-sm-2"></div>
