--- a/PiniT/Views/Manage/ChangePassword.cshtml
+++ b/PiniT/Views/Manage/ChangePassword.cshtml
@@ -2,37 +2,46 @@
 @{
     ViewBag.Title = "Change Password";
 }
+<style>
+    body {
+        background-image: url('../../Content/Images/background.jpg');
+        background-size: cover;
+        background-attachment: fixed;
+    }
+</style>
 
-<h2>@ViewBag.Title.</h2>
+<h2 class="a text-white text-center mx-auto font-weight-bold mt-2">@ViewBag.Title</h2>
 
 @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Change Password Form</h4>
+
     <hr />
+    <div class="container col-md-6 bg-light shadow-lg mx-auto text-center">
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
-        @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
+        @Html.LabelFor(m => m.OldPassword, new { @class = "control-label font-weight-bold" })
+        <div class="col-md-6 col-6 mx-auto">
+            @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control text-center" })
+        </div>
+    </div>
+    <div class="form-group mx-auto text-center">
+        @Html.LabelFor(m => m.NewPassword, new { @class = "control-label font-weight-bold" })
+        <div class="col-md-6 col-6 mx-auto">
+            @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control text-center" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
+        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "control-label font-weight-bold" })
+        <div class="col-md-6 col-6 mx-auto">
+            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control text-center" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+        <div class="col-md-offset-2 col-md-10 mx-auto text-center">
+            <input type="submit" value="Change password" class="btn btn-success mb-2" />
         </div>
     </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Change password" class="btn btn-default" />
-        </div>
     </div>
 }
 @section Scripts {
