--- a/PiniT/Views/Account/ResetPassword.cshtml
+++ b/PiniT/Views/Account/ResetPassword.cshtml
@@ -3,12 +3,20 @@
     ViewBag.Title = "Reset password";
 }
 
-<h2>@ViewBag.Title.</h2>
+<style>
+    body {
+        background-image: url('../../Content/Images/background.jpg');
+        background-size: cover;
+        background-attachment: fixed;
+    }
+</style>
+
+<h2 class="">@ViewBag.Title</h2>
 
 @using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Reset your password.</h4>
+
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.Code)
