many many things

--- a/PiniT/Views/Home/Contact.cshtml
+++ b/PiniT/Views/Home/Contact.cshtml
@@ -35,10 +35,10 @@
                 <address class="cold-m-4 text-center mx-auto">
                     <strong>Join us:</strong><br />
                     <div>
-                        <a href="https://el-gr.facebook.com/"><<img src="~/Content/Images/fb.png" style="width:30px"></a>
-                        <a href="https://www.instagram.com/?hl=el"><<img src="~/Content/Images/insta.png" style="width:30px"></a>
-                        <a href="https://gr.pinterest.com/"><<img src="~/Content/Images/pin.png" style="width:30px"></a>
-                        <a href="https://www.youtube.com/"><<img src="~/Content/Images/yt.png" style="width:30px"></a>
+                        <a href="https://el-gr.facebook.com/"><img src="~/Content/Images/fb.png" style="width:30px"></a>
+                        <a href="https://www.instagram.com/?hl=el"><img src="~/Content/Images/insta.png" style="width:30px"></a>
+                        <a href="https://gr.pinterest.com/"><img src="~/Content/Images/pin.png" style="width:30px"></a>
+                        <a href="https://www.youtube.com/"><img src="~/Content/Images/yt.png" style="width:30px"></a>
                     </div>
                 </address>
 
