--- a/PiniT/Views/Tables/CustomerIndex.cshtml
+++ b/PiniT/Views/Tables/CustomerIndex.cshtml
@@ -34,5 +34,5 @@
 </div>
 
 <div class="mx-auto text-center m-2">
-    @Html.ActionLink("Back", "CustomerIndex", "Restaurants", null, new { @class = "btn btn-info col-2" })
+    @Html.ActionLink("Back", "CustomerIndex", "Restaurants", null, new { @class = "btn btn-dark mx-auto" })
 </div>
