--- a/PiniT/Views/Restaurants/Create.cshtml
+++ b/PiniT/Views/Restaurants/Create.cshtml
@@ -3,59 +3,66 @@
 @{
     ViewBag.Title = "Create";
 }
-
-<h2>Create</h2>
+    <style>
+        body {
+            background-image: url("/Content/Images/background.jpg");
+            background-size: cover;
+            background-attachment: fixed;
+        }
+    </style>
+<h2 class="mx-auto mb-2 mt-4 text-center text-light font-weight-bold a">Create</h2>
 
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
-<div class="form-horizontal">
-    <h4>Restaurant</h4>
-    <hr />
+<div id="card-back" class="col-md-8 col shadow-lg rounded border border-dark text-white text-center mx-auto p-0">
+
+    <h4 class="bg-dark tezt-light p-2">Restaurant</h4>
+    <hr class="m-0"/>
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Restaurant.CompanyName, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Restaurant.CompanyName, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.LabelFor(model => model.Restaurant.CompanyName, htmlAttributes: new { @class = "control-label col-md-2 mx-auto" })
+        <div class="col-md-10 mx-auto">
+            @Html.EditorFor(model => model.Restaurant.CompanyName, new { htmlAttributes = new { @class = "form-control mx-auto" } })
             @Html.ValidationMessageFor(model => model.Restaurant.CompanyName, "", new { @class = "text-danger" })
         </div>
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Restaurant.VAT, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Restaurant.VAT, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.LabelFor(model => model.Restaurant.VAT, htmlAttributes: new { @class = "control-label col-md-2 mx-auto" })
+        <div class="col-md-10 mx-auto">
+            @Html.EditorFor(model => model.Restaurant.VAT, new { htmlAttributes = new { @class = "form-control mx-auto" } })
             @Html.ValidationMessageFor(model => model.Restaurant.VAT, "", new { @class = "text-danger" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(model => model.Restaurant.Address, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Restaurant.Address, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.LabelFor(model => model.Restaurant.Address, htmlAttributes: new { @class = "control-label col-md-2 mx-auto" })
+        <div class="col-md-10 mx-auto">
+            @Html.EditorFor(model => model.Restaurant.Address, new { htmlAttributes = new { @class = "form-control mx-auto" } })
             @Html.ValidationMessageFor(model => model.Restaurant.Address, "", new { @class = "text-danger" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(model => model.Restaurant.Type, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
+        @Html.LabelFor(model => model.Restaurant.Type, htmlAttributes: new { @class = "control-label col-md-2 mx-auto" })
+        <div class="col-md-10 mx-auto">
             @Html.ListBoxFor(model => model.SelectedTypes, Model.Types)
             @Html.ValidationMessageFor(model => model.Restaurant.Type, "", new { @class = "text-danger" })
         </div>
     </div>
     <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
+        <div class="col-6 btn-group">
+            <input type="submit" value="Create" class="btn btn-success" />
+            @Html.ActionLink("Back", "ManagerIndex", null, new { @class = "btn btn-dark mx-auto" })
+
         </div>
     </div>
 </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "ManagerIndex")
-</div>
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
