Images/Database/Logo

--- a/PiniT/Views/Restaurants/CustomerIndex.cshtml
+++ b/PiniT/Views/Restaurants/CustomerIndex.cshtml
@@ -48,7 +48,7 @@
              <div class="row">
                  @if (restaurant.Images.FirstOrDefault(x => x.isProfileImage) == null)
                  {
-                     <img class="col-md-4 col card-img-top roundedimage" src="https://comelite-arch.com/wp-content/uploads/2018/04/How-to-Create-a-Successful-Fine-Dining-Restaurant-0-256x256.jpg" alt="restaurant1">
+                     <img class="col-md-4 col card-img-top roundedimage" src="~/Content/Images/logoS.png" alt="restaurant1">
                  }
                  else
                  {
