--- a/PiniT/Views/Admin/CreateRestaurantType.cshtml
+++ b/PiniT/Views/Admin/CreateRestaurantType.cshtml
@@ -3,8 +3,14 @@
 @{
     ViewBag.Title = "CreateRestaurantType";
 }
-
-<h2 class="a text-center mx-auto mt-3 mb-3">CreateRestaurantType</h2>
+    <style>
+        body {
+            background-image: url('../../Content/Images/background.jpg');
+            background-size: cover;
+            background-attachment: fixed;
+        }
+    </style>
+<h2 class="a text-center mx-auto mt-3 mb-3 text-light">Create a Restaurant Type</h2>
 
 @using (Html.BeginForm()) 
 {
