--- a/PiniT/Views/Admin/CustomersIndex.cshtml
+++ b/PiniT/Views/Admin/CustomersIndex.cshtml
@@ -3,8 +3,14 @@
 @{
     ViewBag.Title = "CustomersIndex";
 }
-
-<h2 class="a text-center mx-auto mt-3 mb-3">All Customers</h2>
+    <style>
+        body {
+            background-image: url('../../Content/Images/background.jpg');
+            background-size: cover;
+            background-attachment: fixed;
+        }
+    </style>
+<h2 class="a text-center mx-auto mt-3 mb-3 text-light">All Customers</h2>
 
 <table class="col-md-10 mx-auto text-center container bg-white">
     <tr>
