--- a/PiniT/Views/Admin/DeleteManager.cshtml
+++ b/PiniT/Views/Admin/DeleteManager.cshtml
@@ -3,10 +3,16 @@
 @{
     ViewBag.Title = "DeleteManager";
 }
+    <style>
+        body {
+            background-image: url('../../Content/Images/background.jpg');
+            background-size: cover;
+            background-attachment: fixed;
+        }
+    </style>
+<h2 class="a text-center mx-auto mt-3 mb-3 text-light">Delete Manager</h2>
 
-<h2 class="a text-center mx-auto mt-3 mb-3">Delete Manager</h2>
-
-<h3 class="text-center mx-auto">Are you sure you want to delete this?</h3>
+<h3 class="text-center mx-auto text-light">Are you sure you want to delete this?</h3>
 <div class="container col-md-6 mx-auto bg-white text-center">
     <h4>PiniTManager</h4>
     <hr />
