--- a/PiniT/Views/Admin/EditCustomer.cshtml
+++ b/PiniT/Views/Admin/EditCustomer.cshtml
@@ -3,8 +3,14 @@
 @{
     ViewBag.Title = "EditCustomer";
 }
-
-<h2 class="a text-center mx-auto mt-3 mb-3">EditCustomer</h2>
+    <style>
+        body {
+            background-image: url('../../Content/Images/background.jpg');
+            background-size: cover;
+            background-attachment: fixed;
+        }
+    </style>
+<h2 class="a text-center mx-auto mt-3 mb-3 text-light">Edit Customer</h2>
 
 <div class="container col-md-6 mx-auto bg-white text-center">
 
