--- a/PiniT/Views/Admin/CreateProductCategory.cshtml
+++ b/PiniT/Views/Admin/CreateProductCategory.cshtml
@@ -3,16 +3,22 @@
 @{
     ViewBag.Title = "CreateProductCategory";
 }
+<style>
+    body {
+        background-image: url('../../Content/Images/background.jpg');
+        background-size: cover;
+        background-attachment: fixed;
+    }
+</style>
+<h2 class="a text-center mx-auto mt-3 mb-3 text-light">Create a Product Category</h2>
 
-<h2 class="a text-center mx-auto mt-3 mb-3">CreateProductCategory</h2>
 
-
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal col-md-6 bg-white container mx-auto text-center">
-     
+
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="h4 form-group col-md-6 text-center mx-auto">
@@ -26,7 +32,7 @@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-8 btn-group m-2 mx-auto text-center">
                 <input type="submit" value="Create" class="btn btn-success" />
-                @Html.ActionLink("Back", "ProductCategoryIndex",null,new { @class="btn btn-dark"})
+                @Html.ActionLink("Back", "ProductCategoryIndex", null, new { @class = "btn btn-dark" })
             </div>
         </div>
     </div>
