--- a/PiniT/Views/Admin/DeleteCustomer.cshtml
+++ b/PiniT/Views/Admin/DeleteCustomer.cshtml
@@ -3,9 +3,15 @@
 @{
     ViewBag.Title = "DeleteCustomer";
 }
-
-<h2 class="a text-center mx-auto mt-3 mb-3">DeleteCustomer</h2>
-<h3 class="text-center mx-auto">Are you sure you want to delete this?</h3>
+    <style>
+        body {
+            background-image: url('../../Content/Images/background.jpg');
+            background-size: cover;
+            background-attachment: fixed;
+        }
+    </style>
+<h2 class="a text-center mx-auto mt-3 mb-3 text-light">Delete Customer</h2>
+<h3 class="text-center mx-auto text-light">Are you sure you want to delete this?</h3>
 
 <div class="container col-md-6 mx-auto bg-white text-center">
     <h4 class="mt-2 mb-2">PiniTCustomer</h4>
