--- a/PiniT/Views/Admin/EditManager.cshtml
+++ b/PiniT/Views/Admin/EditManager.cshtml
@@ -3,53 +3,59 @@
 @{
     ViewBag.Title = "EditManager";
 }
-
-<h2 class="a text-center mx-auto mt-3 mb-3">EditManager</h2>
+<style>
+    body {
+        background-image: url('../../Content/Images/background.jpg');
+        background-size: cover;
+        background-attachment: fixed;
+    }
+</style>
+<h2 class="a text-center mx-auto mt-3 mb-3 text-light">Edit Manager</h2>
 
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
-<div class="form-horizontal col-md-6 bg-white container mx-auto text-center">
-    <h4>PiniTManager</h4>
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    @Html.HiddenFor(model => model.Id)
-    @Html.HiddenFor(model => model.PasswordHash)
-    @Html.HiddenFor(model => model.SecurityStamp)
-    @Html.HiddenFor(model => model.LockoutEndDateUtc)
-    @Html.HiddenFor(model => model.AccessFailedCount)
-    @Html.HiddenFor(model => model.RestaurantAuthorized)
-    @Html.HiddenFor(model => model.EmailConfirmed)
-    @Html.HiddenFor(model => model.PhoneNumber)
-    @Html.HiddenFor(model => model.PhoneNumberConfirmed)
-    @Html.HiddenFor(model => model.TwoFactorEnabled)
-    @Html.HiddenFor(model => model.LockoutEnabled)
+    <div class="form-horizontal col-md-6 bg-white container mx-auto text-center">
+        <h4>PiniTManager</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.Id)
+        @Html.HiddenFor(model => model.PasswordHash)
+        @Html.HiddenFor(model => model.SecurityStamp)
+        @Html.HiddenFor(model => model.LockoutEndDateUtc)
+        @Html.HiddenFor(model => model.AccessFailedCount)
+        @Html.HiddenFor(model => model.RestaurantAuthorized)
+        @Html.HiddenFor(model => model.EmailConfirmed)
+        @Html.HiddenFor(model => model.PhoneNumber)
+        @Html.HiddenFor(model => model.PhoneNumberConfirmed)
+        @Html.HiddenFor(model => model.TwoFactorEnabled)
+        @Html.HiddenFor(model => model.LockoutEnabled)
 
-    <div class="h4 form-group col-md-6 text-center mx-auto">
-        @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label font-weight-normal" })
-        <div class="col-md-12 text-center mx-auto">
-            @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control font-weight-light" } })
-            @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+        <div class="h4 form-group col-md-6 text-center mx-auto">
+            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label font-weight-normal" })
+            <div class="col-md-12 text-center mx-auto">
+                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control font-weight-light" } })
+                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+            </div>
         </div>
-    </div>
-    <div class="h4 form-group col-md-6 text-center mx-auto">
-        @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label font-weight-normal" })
-        <div class="col-md-12 text-center mx-auto">
-            @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control font-weight-light" } })
-            @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
+        <div class="h4 form-group col-md-6 text-center mx-auto">
+            @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label font-weight-normal" })
+            <div class="col-md-12 text-center mx-auto">
+                @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control font-weight-light" } })
+                @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
+            </div>
         </div>
+
+        <div class="form-group btn-group mx-auto text-center">
+            <input type="submit" value="Save" class="btn btn-danger" />
+            @Html.ActionLink("Back", "ManagersIndex", null, new { @class = "btn btn-dark" })
+        </div>
+
     </div>
 
-    <div class="form-group btn-group mx-auto text-center">
-        <input type="submit" value="Save" class="btn btn-danger" />
-        @Html.ActionLink("Back", "ManagersIndex", null, new { @class = "btn btn-dark" })
-    </div>
 
-</div>
-
-    
 }
 
 
